MPD_sima v0.15.3 UNRELEASED

 * Improve HTTP client (use persistent connection)

-- kaliko jack <kaliko@azylum.org>

MPD_sima v0.15.2

 * Fixed sqlite sqlite3.OperationalError VACUUM Error
 cf. https://bugs.python.org/issue28518
 * Add option to queue a chosen number of tracks from an album (closes #28)
 * Add option to shuffle tracks in album mode (Thanks Sacha)

-- kaliko jack <kaliko@azylum.org> Thu, 14 Nov 2019 17:41:22 +0100

MPD_sima v0.15.1

 * Fixed mopidy compatibility implementation

-- kaliko jack <kaliko@azylum.org> Tue, 19 Mar 2019 15:14:48 +0100

MPD_sima v0.15.0

 * Remove EchoNest support (Closes #10)
 * Enhanced queuing behavior in random mode (Closes #16)
 * Add option to prevent single & repeat mode to disable queuing (Closes #19)
 * Honor MPC password/host format on command line option 'host'
 * Fixed fuzzy search for short artist names
 * Client side hardcoded one month caching (ugly workaround for #7)
 * Simplified album search
 * Track search aggregates artist name and MusicBrainzID searches
 * Add an undocumented mopidy compatibility configuration option
   Use the boolean option "mopidy_compat" in the sima section
   cf. https://gitlab.com/kaliko/sima/issues/21#

-- kaliko jack <kaliko@azylum.org> Tue, 19 Mar 2019 13:58:49 +0100

MPD_sima v0.14.4

 * Fixed blacklisting for Random plugin (Closes #14)
 * Fixed sensible flavour of random plugin, thanks dnmx (Closes #15)

-- kaliko jack <kaliko@azylum.org> Thu, 24 Aug 2017 11:46:14 +0200


MPD_sima v0.14.3

 * This release in only intended to get rid of 0.14.2 source tarball.
   Source tar ball for v0.14.2 was badly generated. Release 0.14.2 and 0.14.3
   are actually the same source code, only generated tar were affected.
   Sorry for the inconvenience.

-- kaliko jack <kaliko@azylum.org> Sun, 12 Feb 2017 15:49:03 +0100


MPD_sima v0.14.2

 * Fixed MPD client cache (filters empty strings)
 * Fixed Track object to work with MPD >= 0.20 (Closes #12)
 * Fixed python virtualenv installer
